books/projects/rac/tests/yaml_test/control_flow/if-return.ref.stderr
if-return.cpp:8 (2-8): syntax error, unexpected RETURN, expecting ELSE
  8 |   return 0;
    |   ^^^^^^
